Style Bug: add whitespace for CartItems

--- a/react-ecommerce-component/src/App.css
+++ b/react-ecommerce-component/src/App.css
@@ -7,6 +7,12 @@
   justify-content: center;
 }
 
+@media only screen and (max-width:800px){
+  .App {
+    height: 100vh;
+  }
+}
+
 section {
   margin: 40px 20px;
   min-width: 35vw;
